--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Hello Rigo with Vanilla.js</title>
+    <title>Generador de Cartas Aleatorias</title>
     <link
       rel="stylesheet"
       href="https://use.fontawesome.com/releases/v5.2.0/css/all.css"
@@ -12,18 +12,35 @@
     />
     <link rel="shortcut icon" href="./4geeks.ico" />
   </head>
-  <body>
-    <div class="container-fluid text-center">
-      <h1 class="mt-5">Hello Rigo!</h1>
-      <img src="./rigo-baby.jpg" />
-      <p class="alert alert-warning mt-4">
-        If this text is <b>not</b> centered and <b>yellow</b>, you probably have
-        an error
-      </p>
-      <div class="fixed-bottom p-4">
-        Made with ❤️ by
-        <a href="https://www.4geeksacademy.com">4Geeks Academy</a>
+  <body class="bg-success">
+    <div class="d-flex justify-content-center">
+      <div class="card mt-2" style="width: 18rem; border-radius: 10px;">
+        <div
+          id="topPalo"
+          class="text-start ps-2"
+          style="font-size: 5rem"
+          ;
+        ></div>
+        <div
+          id="value"
+          class="d-flex justify-content-center align-items-center"
+          style="height: 250px; font-size: 8rem"
+          ;
+        ></div>
+        <div
+          id="bottomPalo"
+          class="text-end pe-2"
+          style="font-size: 5rem"
+          ;
+        ></div>
+      </div>
+      <div>
+        <button id="buttonGenerar" type="button" class="btn btn-primary">
+          Generar
+        </button>
       </div>
     </div>
+
+    <script type="text/javascript" src="./app.js"></script>
   </body>
 </html>
