--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
     <link rel="shortcut icon" href="./4geeks.ico" />
   </head>
   <body class="bg-success">
-    <div class="d-flex justify-content-center">
+    <div class="d-flex justify-content-center align-items-center">
       <div class="card mt-2" style="width: 18rem; border-radius: 10px;">
         <div
           id="topPalo"
